--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
   </head>
   <body>
+    <nav id="toc"></nav>
     <main>
       {{ content }}
     </main>
+    <script src="{{ '/assets/js/toc.js' | relative_url }}"></script>
   </body>
 </html>
