--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -40,13 +40,19 @@ main {
 
 table {
   display: flex;
+  flex-direction: column;
   width: 100%;
   box-sizing: border-box;
-  border: 1px solid #fff;
+  border-collapse: collapse;
 }
 tr {
   display: flex;
-  min-height: 30px;
+  justify-content: center;
+  align-items: center;
+}
+th, td {
+  border: 1px solid #fff;
+  padding: 10px;
 }
 
 blockquote {
