--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,9 +7,13 @@
   </head>
   <body>
     <nav id="toc"></nav>
-    <main>
-      {{ content }}
-    </main>
+    <div id="page">
+      <header>HEADER</header>
+      <main>
+        {{ content }}
+      </main>
+      <footer>FOOTER</footer>
+    </div>
     <script src="{{ '/assets/js/toc.js' | relative_url }}"></script>
   </body>
 </html>
