--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,5 +1,5 @@
 /* fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600;700&display=swap');
 
 body {
   display: flex;
@@ -9,7 +9,7 @@ body {
   height: 100vh;
   background-color: #1b1b1f;
   color: #dcdcd3;
-  font-family: "Inter", sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-size: 16px;
   font-weight: 400;
   overflow-wrap: break-word;
