--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -38,6 +38,7 @@ main {
   display: flex;
   flex-direction: column;
   flex: 1;
+  box-sizing: border-box;
   padding: 3rem 3rem 1rem 3rem;
   width: 100%;
   overflow-x: hidden;
