date.js corrected

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link rel="preload" href="{{ '/assets/js/date.js' | relative_url }}" as="script">
-    <script src="js/date.js"></script>
+    <script src="{{ '/assets/js/date.js' | relative_url }}"></script>
   </head>
   <body>
     <nav id="toc"></nav>
