--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -34,13 +34,13 @@ nav#toc {
   }
 }
 
-main {
+div#page {
   display: flex;
   flex-direction: column;
   flex: 1;
+  width: 100%;
   box-sizing: border-box;
   padding: 3rem 3rem 1rem 3rem;
-  width: 100%;
   overflow-x: hidden;
 }
 
