list of figures (lof) generation in docs

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,5 +21,6 @@
       </footer>
     </div>
     <script src="{{ '/assets/js/toc.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/lof.js' | relative_url }}"></script>
   </body>
 </html>
