list of figures (lof) generation updated

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -69,3 +69,11 @@ img {
   height: auto;
   display: block;
 }
+
+/* list of figures */
+/* --------------- */
+
+div#lof {
+  display: flex;
+  flex-direction: column;
+}
